# pytest-kasima

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
kasima_pytest_plugin/: __init__.py
pytest_kasima/: __init__.py
tests/: test_plugin.py
