[tool.poetry]
name = "kasima_pytest_plugin"
version = "0.1.0"
description = ""
authors = ["k4sima_0 <44926913+k4sima@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "kasima_pytest_plugin" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"
pre-commit = "^3.0.0"


[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# addopts = ""
testpaths = ["tests"]

[tool.poetry.plugins.pytest11]
kasima = "kasima_pytest_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
