[tool.poetry]
name = "pytest_kasima"
version = "0.1.3"
description = ""
authors = ["k4sima_0 <44926913+k4sima@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "pytest_kasima" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
rich = { version = "*", optional = true }


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"
pre-commit = "^3.0.0"

[tool.poetry.extras]
rich = ["rich"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--kasima-skip"
testpaths = ["tests"]

[tool.poetry.plugins.pytest11]
kasima = "pytest_kasima"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
